[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.44.0",
    "fastapi>=0.136.1",
    "ngrok>=1.7.0",
    "numpy>=2.4.4",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "uvicorn>=0.46.0",
]
