[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "elevenlabs>=2.44.0",
    "fastapi>=0.136.1",
    "google-api-python-client>=2.194.0",
    "google-auth>=2.49.2",
    "google-auth-httplib2>=0.3.1",
    "ngrok>=1.7.0",
    "numpy>=2.4.4",
    "pytz>=2026.1.post1",
    "rich>=15.0.0",
    "sounddevice>=0.5.5",
    "uvicorn>=0.46.0",
]
